Structure changed: model split, FileHandlingService implemented, server-side Interceptor implemented, client-server files transfer modified