@@ -1,147 +1,83 @@
 package com.illia.file_holder;
 
+import com.illia.server.config.ServerConfig;
 import com.illia.server.file_holder.FileHolder;
 import com.illia.server.file_holder.FileHolderImpl;
 import org.apache.commons.io.FileUtils;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.boot.test.context.SpringBootTest;
-import org.springframework.mock.web.MockMultipartFile;
+import org.springframework.boot.test.mock.mockito.MockBean;
+import org.springframework.test.context.TestPropertySource;
 
 import java.io.*;
 import java.net.URISyntaxException;
 import java.nio.file.Files;
 import java.nio.file.Path;
 
-import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.junit.jupiter.api.Assertions.*;
+import static org.mockito.Mockito.when;
 
+@TestPropertySource("classpath:application-test.properties")
 @SpringBootTest(classes = {FileHolderImpl.class})
 public class FileHolderTest {
 
     @Autowired
     FileHolder fileHolder;
+    @MockBean
+    ServerConfig serverConfig;
 
-    private final String prefix = "test_file_holder/";
+    @Value("${savedFilesDirectory}")
+    String savedFilesDirectory;
 
-    @Disabled
     @Test
-    public void testFileHolder() throws URISyntaxException, IOException {
-        String fileName = "provided.csv";
-        String multipartFileName = "multipartFile";
-
-        fileHolder.setPrefix(prefix);
-        var uri = ClassLoader.getSystemResource(fileName).toURI();
-        var copy = Files.copy(Path.of(uri), Path.of(fileName));
-
-        var expectedLinesAmount = Files.readAllLines(copy).size();
-
-        File providedFile = copy.toFile();
-
-
-        MockMultipartFile mockedMultipartFile;
-
-        try (var is = new FileInputStream(providedFile)){
-            var providedFileBytes = is.readAllBytes();
-            mockedMultipartFile = new MockMultipartFile(multipartFileName, fileName, "text/csv", providedFileBytes);
-        }
-
-        fileHolder.saveFile(fileName, providedFile);
-        fileHolder.saveFile(multipartFileName, mockedMultipartFile);
-
-        var file1 = fileHolder.getFile(fileName);
-        var file2 = fileHolder.getFile(multipartFileName);
-
-
-        var lines1 = Files.readAllLines(file1.toPath());
-        var lines2 = Files.readAllLines(file2.toPath());
-
-        assertTrue(expectedLinesAmount == lines1.size() && expectedLinesAmount == lines2.size());
-        assertTrue(lines1.containsAll(lines2));
-
-    }
-
-    // ?
-    @Test
-    public void testSaveFile() throws URISyntaxException, IOException {
+    public void testSaveFile() throws URISyntaxException {
         String fileName = "provided.csv";
 
         var uri = ClassLoader.getSystemResource(fileName).toURI();
-        var copy = Files.copy(Path.of(uri), Path.of(fileName));
+        var filePath = Path.of(uri);
+        var file = filePath.toFile();
 
-        File providedFile = copy.toFile();
+        var response = fileHolder.saveFile(fileName, file);
+        assertEquals("Saved file on server provided.csv", response);
 
-        var response = fileHolder.saveFile(fileName, providedFile);
-        assertTrue(response.contains("Saved file"));
-
-    }
-
-    @Test
-    public void testSaveMultipartFile() {
-        String fileName = "provided.csv";
-        String multipartFileName = "multipartFile";
-
-        var mockedMultipartFile = new MockMultipartFile(multipartFileName, fileName, "text/csv", "Content".getBytes());
-
-        fileHolder.saveFile(multipartFileName, mockedMultipartFile);
-
-        var responseShouldBeNewFile = fileHolder.saveFile(fileName, mockedMultipartFile);
-        var responseShouldBeUpdatedExisting = fileHolder.saveFile(fileName, mockedMultipartFile);
-
-        assertTrue(responseShouldBeNewFile.contains("Saved file"));
-        assertTrue(responseShouldBeUpdatedExisting.contains("Updated existing file"));
+        response = fileHolder.saveFile(fileName, file);
+        assertEquals("Updated existing file on server provided.csv", response);
     }
 
     @Test
     public void testGetFile() throws URISyntaxException, IOException {
         String fileName = "provided.csv";
-        String multipartFileName = "multipartFile";
-        var expectedLinesAmount = createFiles(fileName, multipartFileName);
 
-        var file1 = fileHolder.getFile(fileName);
-        var file2 = fileHolder.getFile(multipartFileName);
-
-        var lines1 = Files.readAllLines(file1.toPath());
-        var lines2 = Files.readAllLines(file2.toPath());
-
-        assertTrue(expectedLinesAmount == lines1.size() && expectedLinesAmount == lines2.size());
-        assertTrue(lines1.containsAll(lines2));
-
-    }
-
-    private int createFiles(String fileName, String multipartFileName) throws URISyntaxException, IOException {
-        fileHolder.setPrefix(prefix);
         var uri = ClassLoader.getSystemResource(fileName).toURI();
-        var copy = Files.copy(Path.of(uri), Path.of(fileName));
-        var expectedLinesAmount = Files.readAllLines(copy).size();
-        File providedFile = copy.toFile();
-        MockMultipartFile mockedMultipartFile;
-        try (var is = new FileInputStream(providedFile)){
-            var providedFileBytes = is.readAllBytes();
-            mockedMultipartFile = new MockMultipartFile(multipartFileName, fileName, "text/csv", providedFileBytes);
-        }
+        var filePath = Path.of(uri);
+        var expected = Files.readAllBytes(filePath);
 
-        fileHolder.saveFile(fileName, providedFile);
-        fileHolder.saveFile(multipartFileName, mockedMultipartFile);
+        fileHolder.saveFile(fileName, filePath.toFile());
+        var actual = fileHolder.getFile(fileName);
 
-        return expectedLinesAmount;
+        assertArrayEquals(expected, actual);
     }
-
 
 
     @BeforeEach
     public void clearAndCreateDirectory() throws IOException {
-        var directoryPath = Path.of(prefix);
-        fileHolder.setPrefix(prefix);
+        when(serverConfig.getSavedFilesDirectory())
+                .thenReturn(savedFilesDirectory);
+
+        var directoryPath = Path.of(savedFilesDirectory);
         FileUtils.deleteDirectory(directoryPath.toFile());
         Files.createDirectory(directoryPath);
     }
 
     @AfterEach
     public void clearDirectory() throws IOException {
-        var directoryPath = Path.of(prefix);
+        var directoryPath = Path.of(savedFilesDirectory);
         FileUtils.deleteDirectory(directoryPath.toFile());
     }
+
+
 }
